--- a/templates/kubevirt.yaml
+++ b/templates/kubevirt.yaml
@@ -1,26 +1,22 @@
+{{ if .Values.kubevirt.create }}
+---
 apiVersion: kubevirt.io/v1
 kind: KubeVirt
 metadata:
-  name: kubevirt
+  labels:
+    kubevirt.io: ""
+    {{- include "kubevirt.labels" . | nindent 4 }}
+  name: {{ include "kubevirt.fullname" . }}
   namespace: {{ .Release.Namespace }}
+  annotations:
+    "helm.sh/hook": post-install,post-upgrade
 spec:
+  certificateRotateStrategy: {}
   {{- with .Values.kubevirt.configuration }}
   configuration:
-  {{- toYaml . | nindent 4 }}
+    {{- toYaml . | nindent 4 }}
   {{- end }}
-  {{- with .Values.kubevirt.customizeComponents }}
-  customizeComponents:
-  {{- toYaml . | nindent 4 }}
-  {{- end }}
-  imagePullPolicy: {{ .Values.kubevirt.imagePullPolicy }}
-  {{- with .Values.kubevirt.infra }}
-  infra:
-  {{- toYaml . | nindent 4 }}
-  {{- end }}
-  {{- if .Values.kubevirt.uninstallStrategy }}
-  uninstallStrategy: {{ .Values.kubevirt.uninstallStrategy }}
-  {{- end }}
-  {{- with .Values.kubevirt.workloadUpdateStrategy }}
-  workloadUpdateStrategy:
-  {{- toYaml . | nindent 4 }}
-  {{- end }}
+  customizeComponents: {}
+  imagePullPolicy: IfNotPresent
+  workloadUpdateStrategy: {}
+ {{ end }}
